--- a/manifest/ingress.yaml
+++ b/manifest/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: example-ingress
   annotations:
+    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
