--- a/manifest/ingress.yaml
+++ b/manifest/ingress.yaml
@@ -4,12 +4,21 @@ metadata:
   name: example-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+
 spec:
   rules:
     - host: arch.homework
       http:
         paths:
+          - path: /otusapp/(.*)/(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: web
+                port:
+                  number: 8000
           - path: /
             pathType: Prefix
             backend:
